--- a/Installer/Localizations/English.lang
+++ b/Installer/Localizations/English.lang
@@ -18,6 +18,6 @@
 	flashing = "Flashing EEPROM...",
 	creating = "Creating user profile...",
 	installing = "Installing",
-	installed = "MineOS has been installed. Enjoy!",
+	installed = "IMineOS has been installed. Enjoy!",
 	reboot = "Reboot the computer",
 }
