--- a/Applications/Info of computer.app/Localizations/Dansk.lang
+++ b/Applications/Info of computer.app/Localizations/Dansk.lang
@@ -1,20 +1,20 @@
 {
-    welcome = "Welcome, ",
+    welcome = "Velkommen, ",
     KB = " KB (",
     MBtotal = " MB) operating memory total",
     MBfree = " MB) operating memory free",
-    lvlenergy = " recorded energy on the computer (",
-    maxenergy = " max energy)",
+    lvlenergy = " optaget energi på computeren (",
+    maxenergy = " max energi)",
     uptime = " second(s) working computer",
-    efiname = " - EFI name",
-    boot = " - the address of the disk from which the operating system is launched",
+    efiname = " - EFI navn",
+    boot = " - adressen på den disk, hvorfra operativsystemet startes",
     address = " - device address",
-    userslist = "Users list of device:",
-    efinameinput = "Enter the new EFI name",
-    editefiname = "Change EFI name",
-    newefiname = "The new EFI name has been successfully installed!",
+    userslist = "Brugerliste over enhed:",
+    efinameinput = "Indtast det nye EFI-navn",
+    editefiname = "Skift EFI-navn",
+    newefiname = "Det nye EFI-navn er blevet installeret!",
     emptystring = "Empty string.",
-    version = "Version 1.09",
+    version = "Version 2.10",
     dev = "Developed on Hilarious project(hil.su)",
     exit = "Exit"
 }
